--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,8 +7,15 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "^3.12"
+black = "^24.10.0"
+isort = "^5.13.2"
+flake8 = "^7.1.1"
 
 
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
+
+
+[tool.isort]
+profile = "black"
