--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,9 @@ black = "^24.10.0"
 isort = "^5.13.2"
 flake8 = "^7.1.1"
 pytest = "^8.3.3"
+yfinance = "^0.2.50"
+pendulum = "^3.0.0"
+vcrpy = "^6.0.2"
 
 
 [build-system]
