--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,8 @@ pytest = "^8.3.3"
 yfinance = "^0.2.50"
 pendulum = "^3.0.0"
 vcrpy = "^6.0.2"
+streamlit = "^1.40.2"
+plotly = "^5.24.1"
 
 
 [build-system]
